# wizard_stick

./: .gitignore  CMakeLists.txt  README.md  stm32f1xx.cmake  wizard_stick.ioc
Inc/: asd  gesture.h  main.h  stick_conf.h  stm32f1xx_hal_conf.h  stm32f1xx_it.h
Inc/I2Cdev/: I2Cdev.h
Inc/MPU6050/: I2C.h  MPU6050.h  mpu6050.h
Src/: gesture.c  main.c  stm32f1xx_hal_msp.c
Src/MPU6050/: I2C.c  MPU6050.c  inv_mpu.c  inv_mpu_dmp_motion_driver.c
sketch/: sketch.ino
sketch_1/: sketch_1.ino
